cleaned up todo file
added a few new items? i don't remember this

--- a/todo
+++ b/todo
@@ -1,31 +1,65 @@
-turn game into rts :o
 
 -------------
 BUGS:
 --------------
 
-safety dance doesn't damage every time
-ghost units stack ontop of each other
-critters arent affected by slow
-buffs with same name don't stack properly (first amt gets duration refreshed)
-buffs aren't the right size on all units (hidden under square, too big around rect)
-
+crash:
+  crash when spawning units inside each other (fixed for boss though?)
+  check global GameState references - had a bug trying to set the rallyEffect in the main menu
 
 combat:
-rally doesn't work while shooting/about to shoot
+  safety dance doesn't damage every time
+  ghost units stack ontop of each other
+  critters arent affected by slow
+  buffs with same name don't stack properly (first amt gets duration refreshed)
+  buffs aren't the right size on all units (hidden under square, too big around rect)
 
-shouldn't be able to push bosses with units
-should be able to hit enemies without needing to hit the exact center (mainly problem with bosses)
-necromancers (+healers?) all target same corpse/unit
+units:
+  rally doesn't work while shooting/about to shoot
+  shouldn't be able to push bosses with units
+  should be able to hit enemies without needing to hit the exact center (mainly problem with bosses)
+  necromancers (+healers?) all target same corpse/unit
 
-items:
-items too big coming from shop
-saving/enter arena with item on cursor?
+shop screen:
+  item overlay doesn't work in windowed mode
+    - they are an overlay on the game window
+    - but are scaled to fullscreen
+    - too big and in the wrong place in windowed mode
 
-crash when spawning units inside each other (fixed for boss though?)
+  items display on top of the settings menu
+  items too big coming from shop
+  saving/enter arena with item on cursor?
+  
+  guide/restart buttons hover overlaps troop display
 
---check global GameState references - had a bug trying to set the rallyEffect in the main menu
+---------------
+CODE CLEANUP:
+---------------
 
+  - create global list of friendly classes
+  - unify target selection, attack triggering
+    * need proper lambdas? delayed functions cant have params
+  
+ui
+  - show nice cursor
+  - show unit attack CD somehow
+
+shop ui
+  - show item cost in corner
+  - show troop/item stats without needing to hover
+
+units
+  - collision? clustering?
+  - add safe unit create that checks for clipping/ finds new spawn
+  - turn time
+    * already in engine
+    * see if attacking requires LoS angle
+
+combat
+  - attack timing quantized to beat?
+    * classes can have different timings
+    * troops within class can be on different sub-beats (1/2/3/4)
+    * makes music out of sound effects
 
 ---------------
 OPTIMIZATION
@@ -37,111 +71,23 @@ stats are recalculated every frame
 lots of n^2 calculations in new spell system
 finding targets
 
-
--------------
-GAMEPLAY TUNING:
---------------
-enemy summoners are too good, either kill them right away or lose to the summons
-rounds are too fast, multiple waves? 
-
-think about build variety:
-  tanky melee
-  squishy ranged
-  aoe vs single target
-  summoner
-
-also, what enemies require different builds?
-  non-piercing projectiles need tanks in front or shields
-  backline summoners/casters need sneaky assassin or sniper with targeting
-  spam/lots of enemies need AoE
-
-balance to facilitate:
-  give melee more hp/def
-  aoe should do less single-target dps
-
-
-make table of enemy hp vs unit damage 
-don't go blind into balancing
-make sure later waves have enough threats to be able to cast a few spells (can't kill every enemy at start)
-
-different enemy sizes
-
-how to make fun? 
-what does SNKRX do:
-
-  instant control - only two buttons
-  constant threat - lose a few units and the rest of the round is harder/impossible
-  difficulty scaling - starts easy, NG+
-  scaling within a game - first few levels are easy, difficulty spikes that require buying out
-
-  enemy variety
-    green infectors
-    white turrets
-    blue bombers
-  
-  have to react differently to enemy types
-
-  eye candy - lots of player effects
-    AoEs
-    critter spawns
-    chain attacks
-    homing missile
-
-  lots of player attacks happening in rhythms, enemy attacks are "burstier" (watch for a while, react suddenly to bomb/charge etc)
-
-  UNDERLOD is too chaotic, with 3/4 mortars you have to dodge too much
-
-
-  buy screen:
-    always something to look for (matching sets)
-    units start off simple, scale into "god units" (tier 4)
-    units combos (aura +attack speed, match damage types, global buffs)
-  
-to replicate in RTS game:
-
-  start out with slower units, slower paced fights
-  introduce special enemies gradually, have tiers of special units
-  multiple waves in round, increase tension/healing/setup
-
-  right click target? focus down with snipers
-
-
-
-
-
-
 ------------------
-ADDITIONS:
+FEATURES:
 ------------------
 
 tooling:
   one-click builds
   mac/web build?!?!
   debug mode
-    f̶p̶s̶ ̶c̶o̶u̶n̶t̶e̶r̶
-    fps longest frames
-̶ ̶ ̶ ̶ ̶g̶o̶ ̶t̶o̶ ̶l̶e̶v̶e̶l̶ ̶f̶r̶o̶m̶ ̶b̶u̶y̶ ̶s̶c̶r̶e̶e̶n̶
-̶ ̶ ̶ ̶ ̶f̶r̶e̶e̶ ̶g̶o̶l̶d̶
-profiler
-  live profile? separate window?
-  hot functions/files
+    fps counter tracks longest frames
 
 items:
- ̶ ̶c̶o̶s̶t̶ ̶1̶/̶3̶/̶5̶ ̶o̶r̶ ̶2̶/̶5̶/̶1̶0̶
-̶ ̶ ̶c̶a̶n̶ ̶h̶a̶v̶e̶ ̶s̶o̶m̶e̶ ̶#̶ ̶o̶n̶ ̶e̶a̶c̶h̶ ̶s̶q̶u̶a̶d̶
- ̶ ̶n̶e̶w̶ ̶U̶I̶ ̶f̶o̶r̶ ̶i̶t̶e̶m̶s̶,̶ ̶m̶o̶v̶e̶ ̶s̶q̶u̶a̶d̶s̶ ̶t̶o̶ ̶c̶e̶n̶t̶e̶r̶ ̶o̶f̶ ̶b̶u̶y̶ ̶s̶c̶r̶e̶e̶n̶?̶
- i̶t̶e̶m̶s̶ ̶s̶h̶o̶u̶l̶d̶ ̶s̶h̶o̶w̶ ̶h̶o̶v̶e̶r̶t̶e̶x̶t̶ ̶i̶n̶ ̶i̶n̶v̶e̶n̶t̶o̶r̶y̶ ̶(̶w̶h̶e̶n̶ ̶b̶o̶u̶g̶h̶t̶)̶ ̶(̶b̶u̶t̶ ̶n̶o̶t̶ ̶w̶h̶e̶n̶ ̶d̶r̶a̶g̶g̶i̶n̶g̶ ̶b̶e̶t̶w̶e̶e̶n̶ ̶s̶l̶o̶t̶s̶)̶
-
-
-  think about taking out character rolling, move to popup card on certain levels
-  how will items combo? need to have value, can't be too degenerate (stack dmg on sniper)
-
   legendary items (T3, T4)
   most of the randomness will be coming from items now, need flashy and strong items for the endgame
 
   think about unlocking items/classes per run, replayability
 
-
+items to add:
   damage:
     flat dmg 
     %̶d̶m̶g̶
@@ -192,12 +138,6 @@ allies
 
 
 enemies
-  a̶d̶d̶ ̶t̶e̶l̶e̶g̶r̶a̶p̶h̶e̶d̶ ̶m̶e̶l̶e̶e̶ ̶s̶t̶o̶m̶p̶ ̶t̶y̶p̶e̶
- ̶ ̶a̶d̶d̶ ̶s̶u̶m̶m̶o̶n̶e̶r̶
-
-  ̶a̶d̶d̶ ̶l̶a̶s̶e̶r̶ ̶e̶n̶e̶m̶y̶
-̶
-̶ ̶ ̶a̶d̶d̶ ̶s̶t̶a̶r̶ ̶p̶r̶o̶j̶e̶c̶t̶i̶l̶e̶ ̶e̶n̶e̶m̶y̶ ̶(̶s̶h̶o̶o̶t̶s̶ ̶p̶r̶o̶j̶e̶c̶t̶i̶l̶e̶s̶ ̶i̶n̶ ̶6̶ ̶d̶i̶r̶e̶c̶t̶i̶o̶n̶s̶ ̶a̶t̶ ̶s̶a̶m̶e̶ ̶t̶i̶m̶e̶)̶
   add annoying flyers (circle around the arena, tiny projectiles that do not too much damage, small hitbox?, don't collide with objects)
   add horde-type summoner (lots of little fast summons)
 
@@ -257,7 +197,6 @@ allies
 
 tuning
   - movement
-    * m̶e̶l̶e̶e̶ ̶u̶n̶i̶t̶s̶ ̶s̶h̶o̶u̶l̶d̶ ̶s̶t̶o̶p̶ ̶i̶n̶ ̶a̶t̶t̶a̶c̶k̶ ̶r̶a̶n̶g̶e̶,̶ ̶a̶n̶d̶ ̶n̶o̶t̶ ̶p̶u̶s̶h̶ ̶t̶a̶r̶g̶e̶t̶s̶
     caster enemies shouldn't chase (bullet-hell/spread, summoners)
       maybe move randomly or try to escape
 
@@ -265,237 +204,6 @@ tuning
     * enemies should be able to attack on spawn, instead of waiting full cd
       maybe? easily doable with new spell system
 
-  - effects
-    *̶ ̶c̶r̶e̶a̶t̶e̶ ̶l̶a̶y̶e̶r̶s̶ ̶f̶o̶r̶ ̶s̶p̶e̶l̶l̶ ̶e̶f̶f̶e̶c̶t̶s̶,̶ ̶s̶o̶ ̶d̶a̶n̶g̶e̶r̶ ̶z̶o̶n̶e̶s̶ ̶a̶r̶e̶ ̶a̶l̶w̶a̶y̶s̶ ̶v̶i̶s̶i̶b̶l̶e̶
   - spells
-    * s̶h̶o̶u̶l̶d̶ ̶c̶a̶s̶t̶ ̶a̶f̶t̶e̶r̶ ̶s̶l̶i̶g̶h̶t̶ ̶d̶e̶l̶a̶y̶,̶ ̶n̶o̶t̶ ̶i̶m̶m̶e̶d̶i̶a̶t̶e̶l̶y̶
-̶ ̶ ̶ ̶ ̶ ̶ ̶*̶ ̶c̶a̶s̶t̶ ̶t̶i̶m̶e̶?̶ 
       * what to do with overheal/multi-bubble/necromancer if multiple caster pick same target
         * fizzle? go on cd?
-
-CODE CLEANUP:
-  - create global list of friendly classes
-  - unify target selection, attack triggering
-    * need proper lambdas? delayed functions cant have params
-  
-ui
-  - show nice cursor
-  - add unit hotbar per class
-    * ui bar
-    * list of owned units
-  - show unit attack CD somehow
-  - a̶d̶d̶ ̶c̶a̶s̶t̶i̶n̶g̶ ̶a̶n̶i̶m̶a̶t̶i̶o̶n̶
-
-controls
-  - control by class is not fun
-    * units aggro too quickly, can't pull multiple classes off enemies simultaneously
-    * try rally to location instead of rally while mouse pressed
-
-units
-  - collision? clustering?
-  - add safe unit create that checks for clipping/ finds new spawn
-  - turn time
-    * already in engine
-    * see if attacking requires LoS angle
-
-combat
-  - attack timing quantized to beat?
-    * classes can have different timings
-    * troops within class can be on different sub-beats (1/2/3/4)
-    * makes music out of sound effects
-
-
-unit stats
-  https://docs.google.com/spreadsheets/d/1HRqfD-rEdXdnwLKPiguDDNjRDQcnUGDvvm0q2Mh2z8E/edit#gid=0
-  - add group size
-  - change range, aggro range
-
-
-------------------
-GAMEPLAY:
-------------------
-
-how to control units?
-by type?
-
-
-unit types:
-  warrior
-  archer
-  mage
-  healer
-  support
-
-
-
-
-
-
-
-*REPO UNDER NEW MANAGEMENT*
-
-Weekly maintenance updates:
-
-#3
-
-  * Fixed a bug that would cause incorrect party size after loading a looped run (thanks ArnaudOechslin https://github.com/a327ex/SNKRX/pull/15)
-  * Fixed a rare crash due to enemy critters being spawned during a level transition
-  * Improved descriptions for engineer and sentry to avoid confusion
-  * Fixed engineer's and artificer's cooldown not being displayed properly
-  * Changed freezing field's color to blue for better visual clarity
-  * Increased cryomancer's area of effect by 50%
-  * Increased bane's void rift's size by 50%
-  * Beastmaster now has 10% crit chance by default
-  * The fairy will no longer buff non-attacking units
-  * Awakening and enchanted items will no longer buff non-attacking units
-  * Changed magician's Lv.3 effect to "+50% attack speed every 12 seconds for 6 seconds"
-  Added the following keyboard shortcuts:
-    While in the shop:
-      * R rerolls units
-      * 1, 2, 3 buys units
-      * Enter/space starts the round
-    While in the item selection screen:
-      * R rerolls items
-      * 1, 2, 3, 4 buys items
-
-#2
-
-  * Fixed a bug where NG+5 difficulty would go down to NG+4 after looping
-  * Capped enemy movement speed after level 150
-  * Warden's bubble is now affected by magnify
-  * Changed all text instances of "active set" to "active class" to avoid confusion
-  * Added a run timer option - note that the timer will be off for saved runs that started before the patch
-  -- * Alt tabbing now automatically pauses the game while in the arena
-  * Shop level can now be reduced
-
-#1
-  
-  * Fixed several blue screen crashes due to broken looping state
-  * Fixed several blue screen crashes due to broken physics state
-  * Fixed a bug where double clicking the loop button would lead to broken looping state and crashes
-  * Fixed sold items not being restored to the passive pool
-  * Fixed gambler's volume being too loud with high amounts of gold
-  * Fixed soundtrack button not working on the win screen
-  * Fixed volume text bug when decreasing it from 1 to 0
-  * Fixed volume buttons not looping
-  * Fixed a bug where the first run would not have certain items in the item pool
-  * Fixed psyker orbs item saying "+1/2/3" in the shop when it is "+1/2/4"
-  * Fixed kinetic strike not being in the passive pool
-  * Fixed a bug where sometimes restarting the game from a looped run would let you have more units than normal on the next run
-  * Limited critters to 100 due to performance issues
-  * Limited health orbs on the arena to 30 due to performance issues
-  * Limited gold coins on the arena to 30 due to performance issues
-
----
-
-30Hz
-
-Invoker - casts attacks and spells from other units
-  having a unit like this from the start will help ensure that attacks are behind function calls that can be accessed by another unit easily rather than mostly hidden like they are now
-
-Future ideas:
-Chaos related classes
-Cartographer - https://i.imgur.com/Bz6glry.png
-Trappers:
-Emitters: +projectile damage, projectile mods
-  warping
-  homing/barrage
-  wavy, 90, 45 degree
-  splitting tears
-  Traps - map modifier
-    turrets attached to walls shoot single, slow moving projectiles in a predictable pattern that deal lots of damage
-  Triangler - drops a trap and the 3rd trap will trigger the area, dealing X AoE damage 2-3 times
-Brawlers: units focused on crashing on enemies
-  https://i.imgur.com/5YubukS.png - unit idea
-Bodyguard - https://i.imgur.com/Y2pP20v.png
-Conjurer unit that creates an unit that actively protects you from enemy projectiles
-Guardians - https://i.imgur.com/Ynu5Cdw.png
-Cultists - https://i.imgur.com/GsfoZBd.png
-psyker + builder - https://i.imgur.com/VjY6r1d.png
-Assists (2/4) - 
-  Ringmaster (tier 4 assist, nuker) - +15% to all stats to adjacent units, Lv.3 effect - create a cross that deals AoE damage 5 times for 10 seconds
-  Absorber (tier 2 assist, warrior) - absorbs 50% damage from adjacent units, Lv.3 effect - absorbs 75% damage from adjacent units and gives the absorber +25% defense
-  Pardoner (tier 3 assist, mercenary) - 
-  Oracle (tier 1 assist) - +10% dodge chance to adjacent units, Lv.3 effect - +20% dodge chance to adjacent units
-  Seraph (tier 2 assist, healer) - periodically chooses 1 random unit and gives it +100% defense for 6 seconds, Lv.3 - choose 2 units instead
-Add a few builder units that create walls/solids the player can hide behind (https://www.youtube.com/watch?v=KqwBZ_2f7QU&t=2331s)
-Hexblaster? - curser that consumes curses to deal damage
-Bench? - https://i.imgur.com/B1gNVKk.png
-Balance option for when there are more sets - https://i.imgur.com/JMynwbL.png
-Negative effect: colliding with yourself kills one of your units
-https://i.imgur.com/bxfvA7g.png
-https://steamcommunity.com/app/915310/discussions/0/4658391921156086711/ - general feedback
-https://steamcommunity.com/app/915310/discussions/0/4658391921156325745/ - math on gold, rerolls and units
-https://steamcommunity.com/app/915310/discussions/0/3069747783686815659/ - general feedback
-https://steamcommunity.com/app/915310/discussions/0/3069747783688708231/ - general feedback
-https://steamcommunity.com/app/915310/discussions/0/3046104862443040220/ - general feedback
-Challenge mode
-  Units die permanently when they die
-  Slower scaling with less individually threatening units
-  Max snake size goes up every 10 levels
-Draft mode
-Enemy ideas - https://steamcommunity.com/app/915310/discussions/0/3069747783691890511/
-Unit ideas - https://i.imgur.com/VNMS2YV.png
-Unit ideas - https://steamcommunity.com/app/915310/discussions/0/3069747783693969554/
-Unit ideas - https://steamcommunity.com/app/915310/discussions/0/3046104336668792953/
-Achievement ideas - https://i.imgur.com/Q7jHWB2.png, https://i.imgur.com/2l5eist.png
-general ideas - https://i.imgur.com/W8EYUU1.png
-room types - https://i.imgur.com/u2AY1ea.png
-
-Draft system
-Ban system
-Class select
-Random select
-
-
---
-
-
-Roguelite update:
-  Technical improvements:
-    Spawn tech: spawn every entity in a grid, before spawning check to see if grid position is clear, this will prevent any issues due to entities spawning inside one another
-    Battle stats: DPS, damage taken, etc (check Underlords)
-    Tag system: similar to PoE
-    Keyword explanations: similar to StS or Artifact, simply create additional text windows for keywords and what they mean
-    Key rebinding (for non-QWERTY keyboards)
-  StS-like map with nodes, node types:
-    Arena
-    Elite
-    Boss
-    Map (map of bigger size than arena with fixed spawns)
-    Unit shop
-    Item shop
-      Once there are enough items there can be item tiers
-      The item shop should work similarly to the normal shop, where it can be upgraded and then have a higher chance for higher tier items
-    Text + reward
-    Training grounds (upgrade unit)
-    Tavern (heal units)
-    Challenge + reward
-      Go through the labyrinth without hitting any walls
-      Go through the traps without getting hit
-    Room ideas - https://i.imgur.com/ajqtTOc.png
-  Units die permanently when they die (dead units can be stored in bench to be revived later)
-  Units can have items attached to them like in Underlords
-  Unit item ideas:
-    This unit's projectiles pierce/chain/fork/seek/split/stun/etc
-    This unit is a [class]
-  New stat system:
-    Most stats are values from 1 to 10 (can be lower than 1 or higher than 10 due to debuffs/buffs) that represent consistent internal values between all units
-    i.e. 3 attack speed means the same internal attack rate value (like say 6 seconds) for the entire game
-    In general it's better if units don't have hidden internal multipliers on these stats, although sometimes that may be inevitable
-    Damage:
-      Hit:
-        Everything hits except DoT
-      Damage type:
-        Attack - physical attacks, decreased by the enemy's armor
-        Spell - magical attacks, decreased by the enemy's magic resistance
-      Attack type:
-        Crash - damage dealt when bumping into enemies
-        Projectile - damage dealt by projectiles
-        AoE - damage dealt in an area
-        DoT - damage dealt over time
-    Attack speed:
-    Defense:
-      Armor - decreases damage taken from attacks
-      Magic Resistance - decreases damage taken from spells
-    Movement speed:
