made enemy size dynamic (prepping for large version of regular enemies)

--- a/todo
+++ b/todo
@@ -28,7 +28,7 @@ TODO:
     -when in combat, not in the shop
 
 SMALL CLEANUP:
-
+  - can't set rally immediately after switching control group
 
 --------------
 NEW FEATURE PLAN:
