--- a/todo
+++ b/todo
@@ -1,5 +1,12 @@
 
 TODO:
+
+  - make summoners only spawn after round 5
+  - add more dodgeable attacks / enemies
+    - laser is good
+    - spread laser
+    - homing missile (slow, dodgeable)
+
   - make miniboss versions of regular enemies
     - make them bigger
     - give them stronger stats
@@ -24,21 +31,24 @@ TODO:
   
   - make units not chase towards enemies when they are in range (+ push the enemy away)
   
+  -make enemies spawn in different locations
+
   - add new enemy movement patterns
     - avoid player (for summoners)
     - move randomly (for bullet hell)
 
   - make screen transition circle always white
-  - why are unit colors losing saturation? 
-    - maybe the global color is being changed in 1 place (zzz)
 
   -add "on round start" to proc
     -now that items are being created in the shop
     -we need to make sure that the proc effects only trigger
     -when in combat, not in the shop
 
+  -make procs that are unit-based, not per troop
+    (bloodlust, static charge, etc)
+
 SMALL CLEANUP:
-  - can't set rally immediately after switching control group
+  --boss levels do not end when boss dies
 
 --------------
 NEW FEATURE PLAN:
