--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,16 @@
 
 TODO:
-  
-  - add attack picker for enemies
-    - have multiple attacks
-    - with individual cooldowns, or 1 global?
-    - random selection or conditional (ex. target within range)
 
+  -let special enemies use abilities before full cooldown after spawn
+    - cooldown starts at random 0-cooldown
+    - or shorter
+  
   -boss hp bar segments for phases
 
-  -boss moves:
-    -dragon has flame breath sweep
-      -charge up, shoots further, sweeps in a direction
-
+  - do ranged enemies need a melee attack? (can sit on them right now)
+    - damage on contact
+    - knockback stomp 
+  
   - add more dodgeable attacks / enemies
     - laser is good
     - spread laser 
@@ -32,17 +31,6 @@ TODO:
         -vertical or horizontal
       -fire wall (moves back and forth)
 
-  - show boss levels on the level map
-    - star, skull, plus text
-    - think of a special reward for beating a boss level
-
-  - make units "move through" rally point instead of stopping before
-    -easiest way is to assign each unit a random offset from rally
-
-  - make rally point disappear properly when all units have gone there
-    - or just pin all unit to rally until it ends
-    - and have animated rally point (circles moving inwards)
-
   - make units not chase towards enemies when they are in range (+ push the enemy away)
   
   - add new enemy movement patterns
@@ -51,10 +39,23 @@ TODO:
 
   - make screen transition circle always white
 
+  -add title card + hp bar animation to start of boss battles
+    -black transition wipe?
+
   -add "on round start" to proc
 
 SMALL CLEANUP:
-  --boss levels do not end when boss dies
+  --heal doesn't get cleaned up when exiting arena (on quit from settings?)
+    --units persisting after round end ??
+    -- how is garbage collection working on units/teams/procs?
+    -- i thought game objects were naturally culled
+    -- procs aren't game objects
+    -- and are definitely sticking around (at least with active timers)
+
+  -- swordsman doesn't target enemy critters
+
+  --Helper.DamageCircle is hurting troops (overkill)
+
   --troops aggro towards enemies, but not quite close enough to attack
   
   --laser secondary hit detection is stingy (maybe not registering points?)
@@ -70,7 +71,6 @@ get the playthrough to be fun:
   - v2 items
     - add item synergies
 
-    - figure out phasing (add new ghost Group for objects)
     - pass owner unit to :hit() from helper.spell (already done when possible?)
 
   - add level modifiers (maybe don't need, overlaps with special enemies)
