--- a/todo.txt
+++ b/todo.txt
@@ -56,6 +56,9 @@ TODO:
 
 
 SMALL CLEANUP:
+  --items reroll when entering from mainmenu (can reroll by entering and leaving)
+     --lock works correctly
+
   --stunned laser enemy still fires laser, and has no cooldown ("cast" never triggers, but laser happens in precast)
 
   --dragon fire particles don't go far enough (and stay after fire ends)
